# PINN

./: .gitignore  .pre-commit-config.yaml  LICENCE  Makefile  README.md
.github/workflows/: checks.yml  cpplint.yml  requirements.yml  ruff.yml
src/Neural_Network_python/: README.md  pyproject.toml  requirements.txt
src/Neural_Network_python/code/: gen_params.py  main.py  settings.toml
src/Neural_Network_python/code/modules/: data_analytic.py  data_preparation.py  neural_network.py
src/Neural_Network_python/code/tests/: conftest.py  test_analytic_solution.py  test_fp_residual.py  test_peak_threshold.py
src/Simulation_C++/code/: abp_3D_confine.cpp
src/Simulation_Cpp/: .dockerignore  Dockerfile  README.md
src/Simulation_Cpp/code/: LE_1D_confine.cpp  Makefile  abp_3D_confine.cpp  check_nooverlap.cpp  initialization.cpp  periodic_boundary_conditions.cpp  print_file.cpp  update_position.cpp
src/Simulation_Cpp/code/headers/: check_nooverlap.h  initialization.h  periodic_boundary_conditions.h  print_file.h  update_position.h
src/Simulation_Cpp/code/tests/: test_simulation.cpp
