[project]
name = "pinn"
version = "1.0.0"
description = "Physics-Informed Neural Networks"
authors = [{ name = "Jeremy Vachier" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26.2,<2",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "tensorflow>=2.15.0",
    "tensorflow-metal>=1.1.0",
    "datetime>=5.4",
    "statsmodels>=0.14.1",
    "scikit-optimize>=0.9.0",
    "pyarrow>=15.0.0",
    "polars>=0.20.25",
    "parquet>=1.3.1",
    "matplotlib>=3.9.0",
    "keras<3.0.0",
    "plotly>=5.22.0",
    "kaleido>=0.2.1",
]

[dependency-groups]
dev = [
    "pylint>=3.0.3",
    "black>=24.3.0",
    "ruff>=0.2.1",
    "pre-commit>=3.7.0",
    "cpplint>=1.6.1",
    "pytest>=8.0.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
